Prevent whole-page overflow at wide breakpoint

--- a/frontend/assets/stylesheets/components/_bundle-offerings-a.scss
+++ b/frontend/assets/stylesheets/components/_bundle-offerings-a.scss
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;   // close the borders!
+}
 /* Give */
 .bundle-offering-a__give {
     @include bundle-column-wide();
